[tool.poetry]
name = "kumeza"
version = "0.1.0"
description = "ETL SDK for data ingestion"
authors = ["Ngakan Gandhi <ngandhi@pmintl.net>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "*", from = "kumeza"}
]

[tool.poetry.dependencies]
python = "^3.8.1"
hvac = "^2.3.0"
flake8 = "^7.1.0"
bandit = "^1.7.9"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
mypy = "^1.10.1"
mypy-extensions = "^1.0.0"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "kumeza/integration/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
