[tool.poetry]
name = "kumeza"
version = "0.1.0"
description = "ETL SDK for data ingestion"
authors = ["Ngakan Gandhi <ngandhi@pmintl.net>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "kumeza"}
]

[tool.poetry.dependencies]
python = "^3.9"
hvac = "2.3.0"
flake8 = "7.1.0"
bandit = "1.7.9"
isort = "5.13.2"
pytest = "8.2.2"
pytest-cov = "5.0.0"
black = "24.4.2"
mypy = "1.10.1"
mypy-extensions = "1.0.0"
pyyaml = "6.0.1"
types-pyyaml = "6.0.12.20240311"
boto3 = "1.34.144"
moto = "5.0.11"
findspark = "2.0.1"
numpy = "1.26.4"
pyarrow = "17.0.0"
arrow-odbc = "2.0.2"
pyparsing = "3.1.2"
pymssql = "2.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/connectors/test_spark.py"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "kumeza/config/ingestor_config.py",
    "kumeza/kumeza_integration/*",
    "kumeza/connectors/spark.py",
    "kumeza/connectors/tds.py",
    "kumeza/extractors/spark.py",
    "kumeza/utils/aws/__init__.py",
    "kumeza/integrations/rdbms/mssql/*",
    "kumeza/extractors/arrow_odbc.py",
    "kumeza/extractors/mssql.py",
    "kumeza/core/arrow.py",
    "kumeza/core/data_type.py",
    "kumeza/utils/common/date_object.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
