[tool.poetry]
name = "kumeza"
version = "0.1.0"
description = "ETL SDK for data ingestion"
authors = ["Ngakan Gandhi <ngandhi@pmintl.net>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "kumeza"}
]

[tool.poetry.dependencies]
python = "^3.9"
hvac = "2.3.0"
flake8 = "7.1.0"
bandit = "1.7.9"
isort = "5.13.2"
pytest = "8.2.2"
pytest-cov = "5.0.0"
black = "24.4.2"
mypy = "1.10.1"
mypy-extensions = "1.0.0"
pyyaml = "6.0.1"
types-pyyaml = "6.0.12.20240311"
boto3 = "1.34.144"
moto = "5.0.11"
numpy = "1.26.4"
pyarrow = "17.0.0"
arrow-odbc = "2.0.2"
pyparsing = "3.1.2"
pymssql = "2.3.0"
jinja2 = "3.1.4"
s3fs = "2024.6.1"
sqlalchemy = "2.0.34"
influxdb = "^5.3.2"
requests = "^2.32.3"
deltalake = "^0.22.0"
duckdb = "^1.1.3"
polars = "^1.15.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/connectors/test_spark.py"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "kumeza/__init__.py",
    "kumeza/config/ingestor_config.py",
    "kumeza/connectors/spark.py",
    "kumeza/connectors/tds.py",
    "kumeza/connectors/influx.py",
    "kumeza/extractors/spark.py",
    "kumeza/utils/aws/__init__.py",
    "kumeza/engine/rdbms/mssql/*",
    "kumeza/extractors/arrow_odbc.py",
    "kumeza/extractors/rest.py",
    "kumeza/pipeline/*",
    "kumeza/extractors/mssql.py",
    "kumeza/core/transformer.py",
    "kumeza/core/sqlalchemy.py",
    "kumeza/core/compacter.py",
    "kumeza/core/arrow.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
